fixtures/invalid/27-v0.7-bad-fingerprint/input.anatomy
anatomy_version = "0.7"
tagline = "Bad fingerprint fixture"

[identity]
stack = "typescript"
form = "cli-tool"
domain = "developer-tools"
function = "config-validator"
fingerprint = "aaaaaaaaaaaaaaaaaaaa"

[generated]
at = 2026-05-07T00:00:00.000Z
by = "anatomy-cli@0.7.0"
model = "none"
schema = "https://anatomy.dev/spec/0.7/schema.json"
